--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -17,7 +17,7 @@
     "editable": true
    },
    "source": [
-    "This Chatbot project is based on Sequence to Sequence (seq2seq) Deep Natural Language Processing model in which I have used Cornell Movie-Dialogs Dataset which consist of 220,579 conversational exchanges between 10,292 pairs of movie characters which involves 9,035 characters from 617 movies."
+    "### This Chatbot project is based on Sequence to Sequence (seq2seq) Deep Natural Language Processing model in which I have used Cornell Movie-Dialogs Dataset which consist of 220,579 conversational exchanges between 10,292 pairs of movie characters which involves 9,035 characters from 617 movies."
    ]
   },
   {
@@ -27,7 +27,7 @@
     "editable": true
    },
    "source": [
-    "So, lets start with first step Data Preprocessing."
+    "### So, lets start with first step Data Preprocessing."
    ]
   },
   {
@@ -515,14 +515,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Building the Seq2Seq Model"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Creating placeholders for the inputs and the targets"
    ]
@@ -531,7 +537,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -545,7 +553,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Preprocessing the targets"
    ]
@@ -554,7 +565,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -567,7 +580,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Creating the Encoder RNN"
    ]
@@ -576,7 +592,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -594,7 +612,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Decoding the training set"
    ]
@@ -603,7 +624,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -628,16 +651,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "## Decoding the test/validation set"
+    "### Decoding the test/validation set"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -664,7 +692,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Creating the Decoder RNN"
    ]
@@ -673,7 +704,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -715,7 +748,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Building the seq2seq model"
    ]
@@ -724,7 +760,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -748,6 +786,399 @@
     "                                                         keep_prob,\n",
     "                                                         batch_size)\n",
     "    return training_predictions, test_predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TRAINING THE SEQ2SEQ MODEL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting the Hyperparameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "epochs = 100\n",
+    "batch_size = 32\n",
+    "rnn_size = 1024\n",
+    "num_layers = 3\n",
+    "encoding_embedding_size = 1024\n",
+    "decoding_embedding_size = 1024\n",
+    "learning_rate = 0.001\n",
+    "learning_rate_decay = 0.9\n",
+    "min_learning_rate = 0.0001\n",
+    "keep_probability = 0.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining a session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "session = tf.InteractiveSession()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading the model inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "inputs, targets, lr, keep_prob = model_inputs()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting the sequence length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sequence_length = tf.placeholder_with_default(25, None, name = 'sequence_length')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting the shape of the inputs tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "input_shape = tf.shape(inputs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting the training and test predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "training_predictions, test_predictions = seq2seq_model(tf.reverse(inputs, [-1]),\n",
+    "                                                       targets,\n",
+    "                                                       keep_prob,\n",
+    "                                                       batch_size,\n",
+    "                                                       sequence_length,\n",
+    "                                                       len(answerswords2int),\n",
+    "                                                       len(questionswords2int),\n",
+    "                                                       encoding_embedding_size,\n",
+    "                                                       decoding_embedding_size,\n",
+    "                                                       rnn_size,\n",
+    "                                                       num_layers,\n",
+    "                                                       questionswords2int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up the Loss Error, the Optimizer and Gradient Clipping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with tf.name_scope(\"optimization\"):\n",
+    "    loss_error = tf.contrib.seq2seq.sequence_loss(training_predictions,\n",
+    "                                                  targets,\n",
+    "                                                  tf.ones([input_shape[0], sequence_length]))\n",
+    "    optimizer = tf.train.AdamOptimizer(learning_rate)\n",
+    "    gradients = optimizer.compute_gradients(loss_error)\n",
+    "    clipped_gradients = [(tf.clip_by_value(grad_tensor, -5., 5.), grad_variable) for grad_tensor, grad_variable in gradients if grad_tensor is not None]\n",
+    "    optimizer_gradient_clipping = optimizer.apply_gradients(clipped_gradients)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Padding the sequences with the PAD token"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def apply_padding(batch_of_sequences, word2int):\n",
+    "    max_sequence_length = max([len(sequence) for sequence in batch_of_sequences])\n",
+    "    return [sequence + [word2int['<PAD>']] * (max_sequence_length - len(sequence)) for sequence in batch_of_sequences]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Splitting the data into batches of questions and answers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def split_into_batches(questions, answers, batch_size):\n",
+    "    for batch_index in range(0, len(questions) // batch_size):\n",
+    "        start_index = batch_index * batch_size\n",
+    "        questions_in_batch = questions[start_index : start_index + batch_size]\n",
+    "        answers_in_batch = answers[start_index : start_index + batch_size]\n",
+    "        padded_questions_in_batch = np.array(apply_padding(questions_in_batch, questionswords2int))\n",
+    "        padded_answers_in_batch = np.array(apply_padding(answers_in_batch, answerswords2int))\n",
+    "        yield padded_questions_in_batch, padded_answers_in_batch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Splitting the questions and answers into training and validation sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "training_validation_split = int(len(sorted_clean_questions) * 0.15)\n",
+    "training_questions = sorted_clean_questions[training_validation_split:]\n",
+    "training_answers = sorted_clean_answers[training_validation_split:]\n",
+    "validation_questions = sorted_clean_questions[:training_validation_split]\n",
+    "validation_answers = sorted_clean_answers[:training_validation_split]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "batch_index_check_training_loss = 100\n",
+    "batch_index_check_validation_loss = ((len(training_questions)) // batch_size // 2) - 1\n",
+    "total_training_loss_error = 0\n",
+    "list_validation_loss_error = []\n",
+    "early_stopping_check = 0\n",
+    "early_stopping_stop = 100\n",
+    "checkpoint = \"chatbot_weights.ckpt\"\n",
+    "session.run(tf.global_variables_initializer())\n",
+    "for epoch in range(1, epochs + 1):\n",
+    "    for batch_index, (padded_questions_in_batch, padded_answers_in_batch) in enumerate(split_into_batches(training_questions, training_answers, batch_size)):\n",
+    "        starting_time = time.time()\n",
+    "        _, batch_training_loss_error = session.run([optimizer_gradient_clipping, loss_error], {inputs: padded_questions_in_batch,\n",
+    "                                                                                               targets: padded_answers_in_batch,\n",
+    "                                                                                               lr: learning_rate,\n",
+    "                                                                                               sequence_length: padded_answers_in_batch.shape[1],\n",
+    "                                                                                               keep_prob: keep_probability})\n",
+    "        total_training_loss_error += batch_training_loss_error\n",
+    "        ending_time = time.time()\n",
+    "        batch_time = ending_time - starting_time\n",
+    "        if batch_index % batch_index_check_training_loss == 0:\n",
+    "            print('Epoch: {:>3}/{}, Batch: {:>4}/{}, Training Loss Error: {:>6.3f}, Training Time on 100 Batches: {:d} seconds'.format(epoch,\n",
+    "                                                                                                                                       epochs,\n",
+    "                                                                                                                                       batch_index,\n",
+    "                                                                                                                                       len(training_questions) // batch_size,\n",
+    "                                                                                                                                       total_training_loss_error / batch_index_check_training_loss,\n",
+    "                                                                                                                                       int(batch_time * batch_index_check_training_loss)))\n",
+    "            total_training_loss_error = 0\n",
+    "        if batch_index % batch_index_check_validation_loss == 0 and batch_index > 0:\n",
+    "            total_validation_loss_error = 0\n",
+    "            starting_time = time.time()\n",
+    "            for batch_index_validation, (padded_questions_in_batch, padded_answers_in_batch) in enumerate(split_into_batches(validation_questions, validation_answers, batch_size)):\n",
+    "                batch_validation_loss_error = session.run(loss_error, {inputs: padded_questions_in_batch,\n",
+    "                                                                       targets: padded_answers_in_batch,\n",
+    "                                                                       lr: learning_rate,\n",
+    "                                                                       sequence_length: padded_answers_in_batch.shape[1],\n",
+    "                                                                       keep_prob: 1})\n",
+    "                total_validation_loss_error += batch_validation_loss_error\n",
+    "            ending_time = time.time()\n",
+    "            batch_time = ending_time - starting_time\n",
+    "            average_validation_loss_error = total_validation_loss_error / (len(validation_questions) / batch_size)\n",
+    "            print('Validation Loss Error: {:>6.3f}, Batch Validation Time: {:d} seconds'.format(average_validation_loss_error, int(batch_time)))\n",
+    "            learning_rate *= learning_rate_decay\n",
+    "            if learning_rate < min_learning_rate:\n",
+    "                learning_rate = min_learning_rate\n",
+    "            list_validation_loss_error.append(average_validation_loss_error)\n",
+    "            if average_validation_loss_error <= min(list_validation_loss_error):\n",
+    "                print('I speak better now!!')\n",
+    "                early_stopping_check = 0\n",
+    "                saver = tf.train.Saver()\n",
+    "                saver.save(session, checkpoint)\n",
+    "            else:\n",
+    "                print(\"Sorry I do not speak better, I need to practice more.\")\n",
+    "                early_stopping_check += 1\n",
+    "                if early_stopping_check == early_stopping_stop:\n",
+    "                    break\n",
+    "    if early_stopping_check == early_stopping_stop:\n",
+    "        print(\"My apologies, I cannot speak better anymore. This is the best I can do.\")\n",
+    "        break\n",
+    "print(\"Game Over\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TESTING THE SEQ2SEQ MODEL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading the weights and Running the session"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "checkpoint = \"./chatbot_weights.ckpt\"\n",
+    "session = tf.InteractiveSession()\n",
+    "session.run(tf.global_variables_initializer())\n",
+    "saver = tf.train.Saver()\n",
+    "saver.restore(session, checkpoint)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Converting the questions from strings to lists of encoding integers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def convert_string2int(question, word2int):\n",
+    "    question = clean_text(question)\n",
+    "    return [word2int.get(word, word2int['<OUT>']) for word in question.split()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting up the chat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "while(True):\n",
+    "    question = input(\"You: \")\n",
+    "    if question == 'Goodbye':\n",
+    "        break\n",
+    "    question = convert_string2int(question, questionswords2int)\n",
+    "    question = question + [questionswords2int['<PAD>']] * (25 - len(question))\n",
+    "    fake_batch = np.zeros((batch_size, 25))\n",
+    "    fake_batch[0] = question\n",
+    "    predicted_answer = session.run(test_predictions, {inputs: fake_batch, keep_prob: 0.5})[0]\n",
+    "    answer = ''\n",
+    "    for i in np.argmax(predicted_answer, 1):\n",
+    "        if answersints2word[i] == 'i':\n",
+    "            token = ' I'\n",
+    "        elif answersints2word[i] == '<EOS>':\n",
+    "            token = '.'\n",
+    "        elif answersints2word[i] == '<OUT>':\n",
+    "            token = 'out'\n",
+    "        else:\n",
+    "            token = ' ' + answersints2word[i]\n",
+    "        answer += token\n",
+    "        if token == '.':\n",
+    "            break\n",
+    "    print('ChatBot: ' + answer)"
    ]
   }
  ],
